--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -7,7 +7,6 @@
 .Contenedor-banner {
     height: 220px;
     width: 100%;
-    background-color: coral;
     overflow: hidden;
     position: relative;
     display: inline-block;
@@ -45,7 +44,7 @@
     margin-left: 30px;
 }
 
-.browser-default {
+.boton-registrar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,7 +58,7 @@
     cursor: pointer;
 }
 
-.browser-default:hover {
+.boton-registrar:hover {
     background-color: #F39C12;
 }
 
