--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,10 +1,58 @@
-@media all and (min-width: 480px) {
-    .Login {
-      padding: 60px 0;
-    }
-  
-    .Login form {
-      margin: 0 auto;
-      max-width: 320px;
-    }
-  }
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+.contenerdor-login-a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.contenedor-login {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 5PX;
+  background-color: #3498DB;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contenedor-login .input {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #D1D1D1;
+  outline: none;
+}
+
+.contenedor-login img {
+  width: 90px;
+}
+
+.contenedor-login form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contenedor-login form .btn-ingresar {
+  background-color: #F39C12;
+  width: 120px;
+  border-radius: 2px;
+  margin-left:auto;
+  margin-right:auto;
+  left:0;
+  right:0;
+  cursor: pointer;
+}
