--- a/src/pages/perfil-docente/PerfilDocente.css
+++ b/src/pages/perfil-docente/PerfilDocente.css
@@ -26,6 +26,10 @@
 
 .contenedor-materiales {
     width: 40%;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
 }
 
 .contenedor-reconocimientos {
@@ -39,4 +43,8 @@
 
 .contenedor-perfil-docente p {
     font-weight:normal;
+}
+
+.pe {
+    color: #000000;
 }
