--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -13,8 +13,12 @@
     margin-bottom: 15px;
     padding: 10px;
     width: 400px;
-    height: 230px;
+    height: 280px;
     box-shadow: 0px 0px 5px #BCBCBC ;
+}
+
+.cards-carrusel {
+    height: 240px;
 }
 
 .Card .info-card {
@@ -32,6 +36,10 @@
 
 .Card .super {
     margin-top: 20px;
+}
+
+.Card .superc {
+    margin-top: 70px;
 }
 
 .Card .contenedor-info-cards-reco {
