--- a/src/pages/perfil-docente/PerfilDocente.css
+++ b/src/pages/perfil-docente/PerfilDocente.css
@@ -7,7 +7,7 @@
     display: flex;
 }
 
-.contenedor-perfil div h2, h3 {
+.contenedor-perfil  h2, h3 {
     font-size: 20px;
     color: #000000;
     font-weight: bolder;
@@ -22,22 +22,21 @@
     flex-direction: column;
     align-items: center;
     margin: 5px;
+    padding: 20px;
 }
 
 .contenedor-materiales {
-    width: 40%;
+    width: 100%;
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    margin-top: 5px;
     background-color: #FFFFFF;
     overflow-wrap:initial;
 }
 
 .contenedor-reconocimientos {
-    width: 40%;
-    margin: 5px;
+    width: 100%;
     display: flex;
     flex-direction:column;
     justify-content: center;
@@ -49,6 +48,7 @@
 .contenedor-perfil-docente img {
     width: 80px;
     margin-bottom: 15px;
+    padding: 20px;
 }
 
 .contenedor-perfil-docente p {
@@ -65,4 +65,32 @@
 
 .contenedor-perfil-docente p {
     text-align: left;
+}
+
+.contenedor-perfil .c {
+    width: 40%;
+    margin: 5px;
+    display: flex;
+    flex-direction:column;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+}
+
+.contenedor-perfil-docente .btn-perfil {
+    width: 100%;
+    background-color:transparent;
+    box-shadow: none;
+    color: #000000;
+    opacity: 0.5;
+    display: flex;
+    justify-content:left;
+    padding: 0px;
+}
+
+.contenedor-perfil-docente .s {
+    margin-top: 20px;
+}
+
+.contenedor-perfil-docente .btn-perfil:hover {
+    opacity: 1;
 }
