--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -30,16 +30,17 @@
 }
 
 .Card .btn-cards {
-    width: 100%;
+    /* width: 100%; */
     margin-top: 10px;
+    margin: 0 10px  0 0;
 }
 
 .Card .super {
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .Card .superc {
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 .Card .contenedor-info-cards-reco {
