--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -30,8 +30,8 @@
     width: 100%;
     height: 220px;
     position: absolute;
-    background-color: #1D567B;
-    opacity: 0.8;
+    background-color: #000000;
+    opacity: 0.3;   
 }
 
 .texto-encima {
