--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,7 +5,7 @@
 }
 
 .Contenedor-Nav {
-    background-color: #dbdbcf;
+    background-color: #9A9A91;
     display: flex;
     height: 50px;
     justify-content: space-between;
