--- a/src/pages/verMaterial/verMaterial.css
+++ b/src/pages/verMaterial/verMaterial.css
@@ -7,7 +7,7 @@
     display: flex;
 }
 
-.contenedor-perfil  h2, h3 {
+.contenedor-perfil h2, h3 {
     font-size: 20px;
     color: #000000;
     font-weight: bolder;
@@ -28,21 +28,21 @@
 .contenedor-materiales {
     width: 100%;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #FFFFFF;
-    overflow-wrap:initial;
+    overflow-wrap: initial;
 }
 
 .contenedor-reconocimientos {
     width: 100%;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #FFFFFF;
-    overflow-wrap:initial;
+    overflow-wrap: initial;
 }
 
 .contenedor-perfil-docente img {
@@ -52,14 +52,14 @@
 }
 
 .contenedor-perfil-docente p {
-    font-weight:normal;
+    font-weight: normal;
 }
 
 .pe {
     color: #000000;
 }
 
-.contenedor-perfil span{
+.contenedor-perfil span {
     font-weight: bolder;
 }
 
@@ -71,19 +71,19 @@
     width: 40%;
     margin: 5px;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     background-color: #FFFFFF;
     border-radius: 5px;
 }
 
 .contenedor-perfil-docente .btn-perfil {
     width: 100%;
-    background-color:transparent;
+    background-color: transparent;
     box-shadow: none;
     color: #000000;
     opacity: 0.5;
     display: flex;
-    justify-content:left;
+    justify-content: left;
     padding: 0px;
 }
 
@@ -93,4 +93,9 @@
 
 .contenedor-perfil-docente .btn-perfil:hover {
     opacity: 1;
+}
+
+.linkDocente {
+    text-decoration-line: underline;
+    cursor: pointer;
 }
