--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -1,62 +1,8 @@
-* {
-    margin: 0px;
-    padding: 0px;
+.btn {
+    margin: 5px;
+    background-color: #0CB1F2;
 }
 
-.Card {
-    background-color: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    margin-bottom: 15px;
-    padding: 10px;
-    width: 400px;
-    height: 280px;
-    box-shadow: 0px 0px 5px #BCBCBC ;
-}
-
-.cards-carrusel {
-    height: 240px;
-}
-
-.Card .info-card {
-    text-align: left;
-}
-
-.Card span {
-    font-weight: bolder;
-}
-
-.Card .btn-cards {
-    /* width: 100%; */
-    margin-top: 10px;
-    margin: 0 10px  0 0;
-}
-
-.Card .super {
-    /* margin-top: 20px; */
-}
-
-.Card .superc {
-    margin-top: 20px;
-}
-
-.Card .contenedor-info-cards-reco {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    font-size: 12px;
-    width: 100%;
-    padding: 15px;
-}
-
-.fecha {
-    text-align:right;
-}
-
-.reco {
-    height: 280px;
+.btn:hover {
+    background-color: #0CE86F;
 }
