--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,7 +5,7 @@
 }
 
 .Contenedor-Nav {
-    background-color: #0C6FE8;
+    background-color: #0CB1F2;
     display: flex;
     height: 50px;
     justify-content: space-between;
