--- a/src/components/navbar_docente/NavbarDocente.css
+++ b/src/components/navbar_docente/NavbarDocente.css
@@ -5,7 +5,7 @@
 }
 
 .Contenedor-Nav-docente {
-    background-color: #9A9A91;
+    background-color: #0CB1F2;
     display: flex;
     height: 45px;
     justify-content: space-between;
