--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -7,7 +7,7 @@
 .Contenedor-Nav {
     background-color: #0CB1F2;
     display: flex;
-    height: 50px;
+    /* height: 50px; */
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #3498DB;
 }
 
 .Contenedor-Nav .nav-menu {
@@ -43,10 +44,10 @@
 .Contenedor-Nav ul {
     display: flex;
     align-items: center;
-}
+    height: 50px;
+    opacity: 1;
+    font-weight: 600;
 
-.Contenedor-Nav ul a {
-    text-decoration: none;
 }
 
 .Contenedor-Nav ul a li {
@@ -56,21 +57,31 @@
     font-size: 16px;
 }
 
-.Contenedor-Nav ul a li:hover {
-    text-decoration: underline;
-}
-
 .Contenedor-Nav div a img {
     margin-right: 25px;
-    width: 50px;
-}
-
-.Contenedor-Nav a img {
     padding-left: 50px;
-    width: 100px;
+    width: 110px;
 }
 
 .Contenedor-Nav .btn-inicio-secion {
-    border-radius: 0px;
+    /* border-radius: 0px; */
     margin-right: 25px;
+    background-color: #0CE86F !important;
+    font-weight: 900;
+}
+
+.Contenedor-Nav .btn-inicio-secion:hover {
+    /* border-radius: 0px; */
+    margin-right: 25px;
+    background-color: #0CF2B5 !important;
+}
+
+.Contenedor-Nav div .principal-inicio {
+    text-align: center;
+    width: 90px;
+    font-weight: 700;
+}
+
+.Contenedor-Nav div .principal-inicio:hover {
+    background-color: #0B9FD9;
 }
