--- a/src/components/navbar_docente/NavbarDocente.css
+++ b/src/components/navbar_docente/NavbarDocente.css
@@ -7,7 +7,7 @@
 .Contenedor-Nav-docente {
     background-color: #0CB1F2;
     display: flex;
-    height: 45px;
+    /* height: 45px; */
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -44,6 +44,7 @@
 .Contenedor-Nav-docente ul {
     display: flex;
     align-items: center;
+    font-weight: 600;
 }
 
 .Contenedor-Nav-docente ul a {
@@ -57,13 +58,10 @@
     font-size: 16px;
 }
 
-.Contenedor-Nav-docente ul a li:hover {
-    text-decoration: underline;
-}
-
 .Contenedor-Nav-docente div a img {
     margin-right: 25px;
-    width: 50px;
+    padding-left: 50px;
+    width: 110px;
 }
 
 .Contenedor-Nav-docente a img {
@@ -71,3 +69,12 @@
     width: 100px;
 }
 
+.Contenedor-Nav-docente div .principal-inicio {
+    text-align: center;
+    width: 90px;
+    font-weight: 700;
+}
+
+.Contenedor-Nav-docente div .principal-inicio:hover {
+    background-color: #0B9FD9;
+}
