--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -7,7 +7,7 @@
 .Contenedor-Nav {
     background-color: #0CB1F2;
     display: flex;
-    /* height: 50px; */
+    height: 50px;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -50,6 +50,14 @@
 
 }
 
+.Contenedor-Nav ul a {
+    border-radius: 10px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .Contenedor-Nav ul a li {
     color: #FFFFFF;
     list-style: none;
@@ -77,11 +85,17 @@
 }
 
 .Contenedor-Nav div .principal-inicio {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 90px;
+    height: 50px;
     font-weight: 700;
+    border-radius: 10px;
+
 }
 
 .Contenedor-Nav div .principal-inicio:hover {
     background-color: #0B9FD9;
+    border-radius: 10px;
 }
