inicio sesion ok

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -81,7 +81,7 @@
 .Contenedor-Nav .btn-inicio-secion:hover {
     /* border-radius: 0px; */
     margin-right: 25px;
-    background-color: #0CF2B5 !important;
+    background-color: #00c75a !important;
 }
 
 .Contenedor-Nav div .principal-inicio {
