--- a/src/pages/perfil-docente/PerfilDocente.css
+++ b/src/pages/perfil-docente/PerfilDocente.css
@@ -99,3 +99,12 @@
     max-height: 550px;
     overflow: auto;
 }
+
+/* BTN cerrar session */
+
+.btn-cerrar-session{
+    width: 100%;
+    padding: 0 5px 0 5px;
+    display: flex;
+    justify-content: center;
+}
