--- a/src/pages/Subir-reconocimiento/SubirReconocimiento.css
+++ b/src/pages/Subir-reconocimiento/SubirReconocimiento.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     padding: 20px;
     border-radius: 5PX;
     background-color: #0CB1F2;
@@ -33,6 +33,8 @@
 .contenedor-formulario-r img {
     width: 85px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* configuracion del BTN */
@@ -56,4 +58,4 @@
 .contenedor-formulario-r span, .contenedor-formulario-r p {
     color: white;
     font-weight: 600;
-}
+} 
