--- a/src/pages/perfil-docente/PerfilDocente.css
+++ b/src/pages/perfil-docente/PerfilDocente.css
@@ -102,9 +102,18 @@
 
 /* BTN cerrar session */
 
-.btn-cerrar-session{
+.btn-cerrar-session {
     width: 100%;
     padding: 0 5px 0 5px;
     display: flex;
     justify-content: center;
+}
+
+/* Bajar boton de cerrar sesión */
+
+.info-perfil {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
 }
